runFormatTest(import.meta, ['slang']);
runFormatTest(import.meta, ['slang'], { bracketSpacing: true });
