// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NameValueExpression.sol - {"bracketSpacing":true} format 1`] = `
====================================options=====================================
bracketSpacing: true
parsers: ["slang"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
pragma solidity >=0.6.2 <0.7.0;

contract NameValueExpression {
    function callFeed() public { feed.info{value: 10, gas: 800, test: true, many: variables(), to: check[0], forSplits: true}(); }
    D newD = new D{value: amount}(arg);
}
=====================================output=====================================
pragma solidity >=0.6.2 <0.7.0;

contract NameValueExpression {
    function callFeed() public {
        feed.info{
            value: 10,
            gas: 800,
            test: true,
            many: variables(),
            to: check[0],
            forSplits: true
        }();
    }
    D newD = new D{ value: amount }(arg);
}

================================================================================
`;

exports[`NameValueExpression.sol format 1`] = `
====================================options=====================================
parsers: ["slang"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
pragma solidity >=0.6.2 <0.7.0;

contract NameValueExpression {
    function callFeed() public { feed.info{value: 10, gas: 800, test: true, many: variables(), to: check[0], forSplits: true}(); }
    D newD = new D{value: amount}(arg);
}
=====================================output=====================================
pragma solidity >=0.6.2 <0.7.0;

contract NameValueExpression {
    function callFeed() public {
        feed.info{
            value: 10,
            gas: 800,
            test: true,
            many: variables(),
            to: check[0],
            forSplits: true
        }();
    }
    D newD = new D{value: amount}(arg);
}

================================================================================
`;
